fixes done on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -122,6 +122,7 @@ h4 {
   padding-right: 3px;
   margin-bottom: 10px;
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 .show-info {
@@ -284,27 +285,25 @@ h4 {
   font-size: 16px;
   border: none;
   border-radius: 5px;
-  margin-left: 10px;
-  margin-top: 10px;
+  margin-left: 13px;
+  margin-top: 15px;
 }
 
 .episode-image-holder {
   display: flex;
   flex-direction: column;
-  margin: 10px 10px;
 }
 
 .episode-image-holder > img {
-  width: 300px;
-  margin: auto;
+  width: 350px;
 }
 
 .episode-header {
   font-family: 'Work Sans', sans-serif;
   color: #ffd700;
-  margin-left: 5px;
+  margin-left: 13px;
   margin-bottom: 5px;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .episode-details {
@@ -312,7 +311,7 @@ h4 {
   font-family: 'roboto', sans-serif;
   margin-top: 5px;
   margin-bottom: 5px;
-  margin-left: 5px;
+  margin-left: 13px;
 }
 
 @media screen and (min-width: 1025px) {
@@ -442,4 +441,8 @@ h4 {
     margin-left: 20px;
     margin-top: 20px;
   }
+
+  /* .episode-info {
+    margin: auto;
+  } */
 }
